solved collapse/expand issue

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,16 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+
+
+
+.collapsible .content {
+  padding: 6px;
+  background-color: #eeeeee;
+}
+.collapsible .header {
+  background-color: #dddddd;
+  padding: 6px;
+  cursor: pointer;
+}
